catalogue/dest-rule-v2.yaml
# create a dest rule for catalogue-v2 deployed by okteto
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: catalogue-v2
  namespace: robot-shop
spec:
  host: catalogue-v2.robot-shop.svc.cluster.local
  subsets:
  - name: v2
    labels:
      app: catalogue-v2
      dev.okteto.com: "true"
