catalogue/virtual-service-v2.yaml
# create new vs for catalogue-v2 deployed by okteto
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalogue-v2
  namespace: robot-shop
spec:
  hosts:
    - catalogue-v2.robot-shop.svc.cluster.local
  http:
    - route:
      - destination:
          host: catalogue-v2.robot-shop.svc.cluster.local
          subset: v2
---
# Amend existing vs for catalogue so that we can weight traffic between catalogue deployed by okteto and original catalogue deployment from helm      
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: catalogue
  namespace: robot-shop
spec:
  hosts:
    - catalogue.robot-shop.svc.cluster.local
  http:
    - route:
        - destination:
            host: catalogue.robot-shop.svc.cluster.local
            subset: v1
          weight: 90
        - destination:
            host: catalogue-v2.robot-shop.svc.cluster.local
            subset: v2
          weight: 10
